# linear-tree

./: pyproject.toml
src/lineartree/: _classes.py  lineartree.py
